<resources>
    <string name="app_name">MyWay</string>
    <string-array name="place_names_array">
        <item>Государственный исторический музей</item>
        <item>Третьяковская галерея в Лаврушинском пер.</item>
        <item>Музеи Московского Кремля</item>
        <item>Государственный музей им. А.С. Пушкина</item>
        <item>Государственный музей Востока</item>
        <item>Музей русского импрессионизма</item>
        <item>Минералогический музей им. А.Е. Ферсмана</item>
        <item>Государственный Дарвиновский музей</item>
        <item>Палеонтологический музей им. Ю.А. Орлова</item>
        <item>Московский планетарий</item>
        <item>Московский зоопарк</item>
        <item>Новая Третьяковка на Крымском Валу</item>
    </string-array>
    <string-array name="websrc_array">
        <item>http://www.shm.ru/</item>
        <item>http://www.tretyakovgallery.ru/</item>
        <item>https://www.kreml.ru/</item>
        <item>https://pushkinmuseum.art/</item>
        <item>http://www.orientmuseum.ru/</item>
        <item>http://www.rusimp.su/</item>
        <item>https://fmm.ru/</item>
        <item>http://www.darwinmuseum.ru/</item>
        <item>https://www.paleo.ru/museum/</item>
        <item>http://planetarium-moscow.ru/</item>
        <item>http://www.moscowzoo.ru/</item>
        <item>https://www.tretyakovgallery.ru/for-visitors/museums/novaya-tretyakovka/</item>
    </string-array>
    <string-array name="addresses_array">
        <item>м. "Охотный ряд",\nКрасная площадь, 1</item>
        <item>м. "Третьяковская",\nЛаврушинский пер., 10</item>
        <item>м. "Александровский сад"</item>
        <item>м. "Кропоткинская",\nул. Волхонка, 12</item>
        <item>м. "Арбатская",\nНикитский б-р, 12а</item>
        <item>м. "Белорусская",\nЛенинградский просп., 15, стр. 11</item>
        <item>м. "Октябрьская",\nЛенинский просп., д. 18, корп. 2</item>
        <item>м. "Академическая",\nул. Вавилова, 57</item>
        <item>м. "Коньково",\nул Профсоюзная, 123</item>
        <item>м. "Баррикадная",\nул.Садовая-Кудринская, 5, стр. 1</item>
        <item>м. "Баррикадная",\nул. Б. Грузинская, 1</item>
        <item>м. "Парк Культуры",\nул. Крымский Вал, 10</item>
    </string-array>
    <string-array name="numbers_array">
        <item>+74956924019</item>
        <item>+74959570727</item>
        <item>+74956954146</item>
        <item>+74956979578</item>
        <item>+74956910212</item>
        <item>+74951457555</item>
        <item>+74959543900</item>
        <item>+74991346124</item>
        <item>+74953391500</item>
        <item>+74952217690</item>
        <item>+74992522951</item>
        <item>+74959570727</item>
    </string-array>
    <string-array name="hours_array">
        <item>ПН, СР, ЧТ, ВС 10:00–18:00; ПТ, СБ 10:00–21:00; ВТ - вых.\nКасса закрывается за 1 час до окончания работы музея</item>
        <item>ПН вых.; ВТ, СР, ВС 10:00–18:00; ЧТ, ПТ, СБ 10:00 — 21:00.\nВход закрывается за 1 час до окончания работы галереи</item>
        <item>ПН-ВС 10:00-17:00; ЧТ - вых.\nКасса 9:30-16.30</item>
        <item>ПН вых.; ВТ, СР, СБ, ВС с 11:00 до 20:00; ЧТ, ПТ с 11:00 до 21:00.\nКасса закрывается за 1 час до окончания работы музея</item>
        <item>ПН вых.; ВТ, ПТ, СБ, ВС 11:00—20:00, касса до 19:30; СР, ЧТ 12:00—21:00,\nкасса до 20:30</item>
        <item>ПН, ВТ, ПТ, СБ, ВС 11:00–20:00; СР, ЧТ 12:00–21:00.\nКасса закрывается за 30 мин до окончания работы музея</item>
        <item>ПН, ВТ - вых.; СР, ЧТ, ПТ, ВС 11:00-17:00; СБ 11:00–19:00.\nКассы закрывается за 30 мин до окончания работы музея</item>
        <item>ПН вых.; ВТ, СР, ПТ, СБ, ВС 10:00–18:00, касса до 17:30; ЧТ 10:00–21:00,\nкасса до 20:00</item>
        <item>ПН, ВТ - вых.; СР-ВС 11:00–18:00,\nкасса до 17:15</item>
        <item>ВТ вых.; ПН, СР-ВС 10:00–21:00</item>
        <item>ПН-ВС 10:00–17:00,\nкассы до 16:00</item>
        <item>ПН вых.; ВТ, СР, ВС 10:00–18:00; ЧТ, ПТ, СБ 10:00–21:00</item>
    </string-array>
    <string-array name="tickets_array">
        <item>До 16 лет бесплатно,\n16-18 лет 150 руб.</item>
        <item>До 18 лет бесплатно</item>
        <item>До 16 лет бесплатно,\n16-18 лет от 250 руб.</item>
        <item>До 16 лет бесплатно,\n16-18 лет 200 руб.</item>
        <item>До 16 лет бесплатно,\n16-18 лет 150 руб.</item>
        <item>До 16 лет бесплатно,\n16-18 лет 250 руб.</item>
        <item>До 18 лет 150 руб.</item>
        <item>До 18 лет 150 руб.</item>
        <item>До 18 лет 200 руб.</item>
        <item>100-600 руб. в зависимости от времени и сеанса;\nподробнее - на сайте</item>
        <item>До 18 лет бесплатно</item>
        <item>До 18 лет бесплатно</item>
    </string-array>
    <string-array name="descriptions_array">
        <item>В музее представлены экспонаты по истории и культуре России с древнейших времен до наших дней. Здание музея построено в 1883 г., интерьер каждого зала уникален и соответствует декору представляемых у нем экспонатов</item>
        <item>В галерее представлена шедевры русского искусства XI - начала XX в., более 1300 произведений - от домонгольских икон и мозаик до пейзажной, портретной и исторической живописи и скульптуры. Галерея основана в 1856 г. купцом Павлом Третьяковым как частная коллекция, а в 1892 г. передана в дар городу</item>
        <item>Московский Кремль - главный символ России. Состоит из Оружейной палаты, колокольни Ивана Великого, а также Успенского, Архангельского, Благовещенского соборов и др. О посещении отдельных зданий узнавайте в кассах</item>
        <item>Крупнейшее в России собрание зарубежного искусства. Около 700 тыс. произведений разных эпох - от Древнего Египта и античной Греции - до начала XXI в. Музей был открыт в 1912 г.</item>
        <item>В музее представлено искусство народов Востока: Китая, Японии, Кореи, Индии, Ирана, Средней Азии, Кавказа, Закавказья, Казахстана и др. Всего свыше 147500 музейных экспонатов</item>
        <item>В постоянной экспозиции музея собрана вся история русского импрессионизма - произведения Константина Коровина, Валентина Серова, Игоря Грабаря, Петра Кончаловского и многих других</item>
        <item>В музее представлены коллекции минералов и изделий из поделочных и драгоценных камней. В 2016 г. музею исполнилось 300 лет - это старейший минералогийский музей России и Европы</item>
        <item>Крупнейший естестенно-научный музей Москвы. Основан в 1907 г. профессором А.Ф. Котсом. В фондах музея хранится около 400000 экспанатов и произведений искусства, демонстрирующих эволюцию биологических видов на Земле</item>
        <item>Один из крупнейших естественноисторических музев мира. Экспозиция посвящена эволюции органического мира Земли. Самая грандиозная часть экспозиции - скелеты динозавров и вымерших гигантских млекопитающих</item>
        <item>В Большом звездном зале планетария можно увидеть перемещение по небу свыше 9 тыс. небесных тел. В планетарии работают две обсерватории, 4D-кинатеатр, интерактивный музей "Лунариум" и др.</item>
        <item>Московский зоопарк был открыт в 1864 г. и является одним из станейших в Европе. Сейчас в зоопарке содержится более 8000 животных, относящихся к более чем 1000 видов мировой фауны</item>
        <item>Наиболее полная в России постоянная экспозиция отечественного искусства ХХ в. - от авангард и соцреализма до искусства андеграунда и новейших течений</item>
    </string-array>
    <string-array name="cafe_array">
        <item>Кафе "Фестивальное" в ГУМе</item>
        <item>Сетевой ресторан "МакДональдс"</item>
        <item>Кафе "Фестивальное" в ГУМе</item>
        <item>Сетевое кафе "Теремок"</item>
        <item>Сетевой ресторан Burger King</item>
        <item>Кофейня "Nook Coffee"</item>
        <item>Сетевой ресторан Burger King</item>
        <item>Кафе в цокольном этаже музея</item>
        <item>Кафе в музее</item>
        <item>Сетевой ресторан Burger King</item>
        <item>Сетевой ресторан Burger King</item>
        <item>Кафе на 1-м этаже галереи</item>
    </string-array>
    <string-array name="cafeaddresses_array">
        <item>м. "Охотный ряд", Красная площадь, 3, ГУМ, 3-й этаж</item>
        <item>м. "Третьяковская", ул. Б. Ордынка ул., 21, стр.2</item>
        <item>м. "Охотный ряд", Красная площадь, 3, ГУМ, 3-й этаж</item>
        <item>м. "Кропоткинская", Гоголевский б-р, 3</item>
        <item>м. "Арбатская", ул. Воздвиженка, 9</item>
        <item>м. "Белорусская", Ленинградский просп., 15, стр. 11, 3-й этаж музея</item>
        <item>м. "Октябрьская", Ленинский просп., 2А, отель "Варшава"</item>
        <item>м. "Академическая", ул. Вавилова, 57</item>
        <item>м. "Коньково", ул Профсоюзная, 123</item>
        <item>м. "Баррикадная", ул.Садовая-Кудринская, 3А</item>
        <item>м. "Баррикадная", ул.Садовая-Кудринская, 3А</item>
        <item>м. "Парк Культуры", ул. Крымский Вал, 10</item>
    </string-array>
    <string-array name="food_array">
        <item>Пицца + кола 200 руб.</item>
        <item>Бургер + картошка + кола 200 руб.</item>
        <item>Пицца + кола 200 руб.</item>
        <item>Блины + чай 200 руб.</item>
        <item>Бургер + картошка + кола 200 руб.</item>
        <item>Сэндвич + кофе 250 руб.</item>
        <item>Бургер + картошка + кола 200 руб.</item>
        <item>Пирожок + салат + чай 150 руб.</item>
        <item>Кофе + пирожное 250 руб.</item>
        <item>Бургер + картошка + кола 200 руб.</item>
        <item>Бургер + картошка + кола 200 руб.</item>
        <item>Сэндвич + кофе 250 руб.</item>
    </string-array>
    <string-array name="parks_names_array">
        <item>Парк Горького</item>
        <item>Сокольники</item>
        <item>Зарядье</item>
        <item>Измайловский парк</item>
        <item>Царицыно</item>
        <item>Сад им. Баумана</item>
        <item>Красная Пресня</item>
        <item>Cад Эрмитаж</item>
        <item>Парк Кусково</item>
    </string-array>
    <string name="description">Описание места: </string>
    <string name="websrc">Сайт: </string>
    <string name="address">Адрес: </string>
    <string name="number">Номер: </string>
    <string name="hours">Часы работы: </string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
</resources>